--- a/FaithConnect/Views/Shared/_AdminLayout.cshtml
+++ b/FaithConnect/Views/Shared/_AdminLayout.cshtml
@@ -92,9 +92,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/Admin/CreateGroup">
-                            <i class="fas fa-object-group"></i>
-                            <p>Create Group</p>
+                        <a href="~/Admin/ManageGroups">
+                            <i class="fas fa-users"></i>
+                            <p>Manage Groups</p>
                         </a>
                     </li>
                 </ul>
