--- a/FaithConnect/Views/Home/Signup.cshtml
+++ b/FaithConnect/Views/Home/Signup.cshtml
@@ -46,10 +46,10 @@
                         </div>
                         <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
                             <div class="dragArea row">
-                                <div class="col-12 form-group mb-3">
+                                <div class="col-md-6 form-group mb-3">
                                     <input type="text" class="form-control" name="firstname" placeholder="First Name" required />
                                 </div>
-                                <div class="col-12 form-group mb-3">
+                                <div class="col-md-6 form-group mb-3">
                                     <input type="text" class="form-control" name="lastname" placeholder="Last Name" required />
                                 </div>
                                 <div class="col-12 form-group mb-3">
@@ -59,7 +59,7 @@
                                     <input type="text" class="form-control" name="email" placeholder="Email" required />
                                     @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="col-12 form-group mb-3">
+                                <div class="col-md-4 form-group mb-3">
                                     <select class="form-control" name="city" id="city" required>
                                         <option value="" disabled selected>City</option>
                                         <option value="Cebu City">Cebu City</option>
@@ -117,12 +117,12 @@
                                         <!-- Add more cities as needed -->
                                     </select>
                                 </div>
-                                <div class="col-12 form-group mb-3">
+                                <div class="col-md-4 form-group mb-3">
                                     <select class="form-control" name="barangay" id="barangay" required>
                                         <option value="" disabled selected>Barangay</option>
                                     </select>
                                 </div>
-                                <div class="col-12 form-group mb-3">
+                                <div class="col-md-4 form-group mb-3">
                                     <input type="text" class="form-control" name="zipcode" placeholder="Zip Code" pattern="\d{4,5}" title="Please enter a valid zip code with 4 to 5 digits" required />
                                 </div>
                                 <div class="col-12 form-group mb-3">
@@ -137,7 +137,7 @@
                                     <input type="password" class="form-control" name="ConfirmPass" placeholder="Confirm Password" required />
                                     @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="col-12 form-group mb-3 mb-3" >
+                                <div class="col-12 form-group mb-3 mb-3" hidden>
                                     @Html.DropDownList("Role", (IEnumerable<SelectListItem>)ViewBag.Role, new { @class = "form-control" })
                                 </div>
                                 <div class="col-12 form-group">
@@ -158,7 +158,6 @@
                 </div>
             </div>
         </section>
-
     }
 
     <section data-bs-version="5.1" class="footer2 cid-uagYZQ5ASz" once="footers" id="footer02-1y">
